...
import com.kingpaging.qwelcome.ui.components.NeonButtonStyle
import com.kingpaging.qwelcome.ui.components.NeonWarningBanner
import com.kingpaging.qwelcome.util.rememberHapticFeedback
import com.kingpaging.qwelcome.viewmodel.templates.TemplateListUiState
import com.kingpaging.qwelcome.viewmodel.templates.filterAndOrderTemplates

internal const val TEMPLATE_LIST_TEST_TAG = "template_list"

@Suppress("FunctionNaming", "LongMethod", "LongParameterList")
@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TemplateListScreen(
    uiState: TemplateListUiState,
...
